# vk1

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: common.cmake  deps.cmake
framework/: CMakeLists.txt
framework/include/vk1/: context.hpp
framework/include/vk1/common/: common.hpp  vk_common.hpp  vk_init.hpp  vk_loader.hpp  vk_type.hpp  vk_util.hpp
framework/include/vk1/core/: context.hpp  descriptor.hpp  pipeline.hpp
framework/src/: context.cpp  descriptor.cpp  pipeline.cpp  vk_loader.cpp
framework/test/: main.cpp
shaders/: input_structures.glsl  mesh.frag  mesh.vert  tex_image.frag
